# interactive-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vampire.py  vampire.spec  vampire_mac.spec  wizard_emergency.py  wizard_emergency.spec  wizard_emergency_linux.spec  wizard_emergency_mac.spec
.github/: copilot-instructions.md
.github/workflows/: call-deploy-wizard-emergency.yml  call-run-tests.yml  deploy-wizard-emergency.yml  on-push-branch-main.yml  on-push.yml
game/src/console/: console_manager.py
game/src/interactive_engine/: state.py
game/wizard_emergency/: README.md  __main__.py
src/console/: console_manager.py  console_styles.py
src/interactive_engine/: data_classes.py  engine.py  state.py  strings.py
src/interactive_engine/utils/: get_action.py  test_deep_merge.py  test_get_action.py
src/utils/: deep_merge.py  get_version.py  test_deep_merge.py
src/vampire_utils/: instructions.py
src/wizard_emergency_utils/: strings.py
