[project]
name = "tje-interactive-engine"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.12"

[tool.poe.tasks]
# Run all unit tests
test = "python -m unittest discover -s src -p \"test*.py\""

# Run the Wizard Emergency game
run = "python vampire.py"

# Run the Wizard Emergency game inside a Docker container
'run:docker' = "docker-compose run --rm wizard-emergency"

# Build the Wizard Emergency executable using PyInstaller
build = "python -m PyInstaller vampire.spec"

# Build the Wizard Emergency executable for MacOS
'build:mac' = "python -m PyInstaller vampire_mac.spec"

# Build the Wizard Emergency executable inside a Docker container
'build:docker' = "docker build -t wizards ."
